# logbook-back

./: .dockerignore  .env  .gitignore  Cargo.toml  DockerPormetheus  Dockerfile  README.md  docker-compose.yml  logbook  logbook.pub  makefile  notes  prometheus.yml
.github/workflows/: deploy.yml  main.yml  test.yml
migrations/2024-02-20-191835_create_loginfo/: down.sql  up.sql
migrations/2024-02-20-202459_change/: down.sql  up.sql
migrations/2024-02-20-203718_end_datetime/: down.sql
migrations/2024-02-21-055357_end-datetime-null/: up.sql
migrations/2024-02-26-053832_create-user/: down.sql  up.sql
migrations/2024-02-26-055728_create-user-password/: up.sql
migrations/2024-02-26-201514_fix-loginfo-relation/: down.sql  up.sql
migrations/2024-02-26-205427_add-time-not-null/: down.sql  up.sql
migrations/2024-03-07-053522_USER_VIRIFIED/: down.sql  up.sql
migrations/2024-03-11-203916_swap/: down.sql  up.sql
migrations/2024-03-12-192007_drop/: down.sql  up.sql
migrations/2024-03-25-061906_images/: down.sql  up.sql
migrations/2024-03-25-063749_avatar_relation/: down.sql  up.sql
migrations/2024-03-26-064416_images_requirements/: down.sql  up.sql
migrations/2024-05-06-061851_logbook-photos/: down.sql  up.sql
migrations/2024-05-18-122029_fix-image-relation/: down.sql  up.sql
migrations/2024-05-31-155254_trgm_logbooklist/: down.sql  up.sql
migrations/2024-08-26-193738_dive_sites/: up.sql
migrations/2024-09-09-064118_dive_site_fix/: down.sql  up.sql
migrations/2024-10-11-151112_update_message_creator/: down.sql  up.sql
migrations/2024-11-29-122035_atchievments/: down.sql  up.sql
src/: apiDoc.rs  api_doc.rs  error.rs  main.rs  otel.rs  router.rs  schema.rs
src/common/: db.rs  env.rs  error.rs  error_boundary.rs  jwt.rs  load_env_variable.rs  mailer.rs  mod.rs  multipart.rs  redis.rs  runtime_scheduler.rs  security.rs  validators.rs
src/common/formatters/: date.rs
src/common/validators/: mod.rs  validate_email.rs  validate_password.rs
src/dive_chat/: chat_consumer.rs  chat_producer.rs  chat_socket_events.rs  kafka_chat_handler.rs  mod.rs  model.rs  router.rs  service.rs  test_state.rs
src/dive_chat/chat_socket/: chat_socket_events.rs  event_emmiters.rs  mod.rs  model.rs
src/dive_sites/: dive_site_list_query.rs  mod.rs  model.rs  router.rs  service.rs
src/images/: model.rs  service.rs
src/logbook/: log_list_query.rs  mod.rs  model.rs  router.rs  service.rs
src/router/: user.rs
src/router/user/: login.rs  logout.rs  refresh_token.rs  register.rs  register_handler.rs  verification_code.rs  verify_user.rs
src/router/user/login/: login_user_dto.rs  login_user_handler.rs
src/router/user/logout/: logout_user_handler.rs
src/router/user/refresh_token/: refresh_token_dto.rs  refresh_token_handler.rs
src/router/user/register/: register_handler.rs  register_handler_dto.rs
src/router/user/verification_code/: verification_code_dto.rs  verification_code_handler.rs
src/router/user/verify_user/: verify_user_dto.rs  verify_user_handler.rs
src/service/: user.rs
src/service/user/: check_verification_code.rs  get_user_by_id.rs  register.rs  reset_password.rs  user_verified.rs
src/service/user/dto/: model.rs
src/users/: auth.rs  mod.rs  model.rs  router.rs  service.rs  user_runtime_scheduler.rs
src/utils/: validator.rs
src/utils/validator/: validate_email.rs  validate_password.rs
