[package]
name = "logbook-app-back"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.12", features = ["postgres", "r2d2", "chrono", "uuid", "64-column-tables", "numeric", 'serde_json'] }
dotenvy = "0.15.7"
tokio = { version = "1.46.1", features = ["full"] }
serde = "1.0.219"
serde_derive = "1.0.219"
axum-extra = { version = "0.10.1", features = ["cookie"] }
serde_json = "1.0.141"
axum = { version = "0.8.4", features = ['multipart']}
tower-http = { version = "0.6.6", features = ["trace", "cors", "fs"] }
tower = { version = "0.5.2", features = ["util"] }
hyper = "1.6.0"
regex = "1.11.1"
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
http = "1.3.1"
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "url", "chrono", "decimal"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
chrono = {version = "0.4.41", features = ['serde']}
cargo-watch = "8.5.3"
lettre = {version = "0.11.17", features = []}
argon2 = "0.5.3"
rand_core = "0.6.4"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
time = "0.3.41"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
redis = "0.32.4"
image = "0.25.6"
multipart = "0.18.0"
base64 = "0.22.1"
rand = "0.9.2"
native-tls = "0.2.14"
lettre_email = "0.9.4"
bigdecimal = {version = "0.4.8", features= ["serde"]}
thiserror = "2.0.12"
tracing = "0.1.41"
opentelemetry = {version = "0.29.0", features = []}
opentelemetry_sdk = "0.29.0"
tracing-opentelemetry = "0.31.0"
opentelemetry-otlp = "0.30.0"
opentelemetry-stdout = "0.30.0"
opentelemetry-prometheus = "0.29.1"
prometheus = "0.14.0"

[[bin]]
name = "logbook-app-back"
path = "src/main.rs"
